--- a/src/app/main-content/work/work.component.html
+++ b/src/app/main-content/work/work.component.html
@@ -13,27 +13,32 @@
                     <img class="wheel rotating" src="././assets/animation_wheels/orange_sun.svg" alt="">
                 </div>
                 <div class="description fontQuicksand">
-                    <div class="my_contribution">
-                        {{ 'work.Pokedex.contribution' | translate }}
-                    </div>
                     <div class="about_project">
                         <div class="project_name">
                             <h5>Pokedex</h5>
-                            <img class="project_icon jumping_icon" src="./assets/emojis/statistic.svg" alt="icon for showing more info">
+                            <img 
+                            (mouseover)="showContribution = true"
+                            (mouseleave)="showContribution = false"
+                            class="project_icon jumping_icon" src="./assets/emojis/statistic.svg" alt="icon for showing more info">
                         </div>
                         <span class="technologies">REST API | JavaScript | CSS | HTML</span>
                         {{ 'work.Pokedex.description' | translate }}
                         <div class="interactiv_btns">
-                            <button class="btn">Git Hub</button>
-                            <button class="btn">Live Test</button>
+                            <button class="btn" (click)="goToUrl('https://github.com/BaraDroid/pokedex')">Git Hub <img src="./assets/menu_icons/arrow_outward.svg" alt="illustrating arrow"></button>
+                            <button class="btn" (click)="goToUrl('https://pokedex.barbora-lambeinova.de/')">Live Test <img src="./assets/menu_icons/arrow_outward.svg" alt="illustrating arrow"></button>
                         </div>
                     </div>
                     <div class="arrows">
-                        <span><< {{ 'work.arrow_left' | translate }}</span>
-                        <span>{{ 'work.arrow_right' | translate }} >></span>
+                        <span class="slide_btn"><< {{ 'work.arrow_left' | translate }}</span>
+                        <span class="slide_btn">{{ 'work.arrow_right' | translate }} >></span>
                     </div>
                 </div>
             </div>
+
+            <div class="my_contribution" *ngIf="showContribution">
+                {{ 'work.Pokedex.contribution' | translate }}
+            </div>
+
         </div>
         <div class="scroll_bar">
             <app-navdots [whiteColor]="isWhite" [sectionIndex]="indexOfThisSection"></app-navdots>
