creating JSON projects for better itteration

--- a/src/app/main-content/work/work.component.html
+++ b/src/app/main-content/work/work.component.html
@@ -9,23 +9,23 @@
             </div>
             <div class="slider">
                 <div class="screenshot">
-                    <img class="project_image" src="././assets/screenshots/pokedex.png" alt="">
+                    <img class="project_image" src="{{ projects[0].imgSrc }}" alt="">
                     <img class="wheel rotating" src="././assets/animation_wheels/orange_sun.svg" alt="">
                 </div>
                 <div class="description fontQuicksand">
                     <div class="about_project">
                         <div class="project_name">
-                            <h5>Pokedex</h5>
+                            <h5>{{ projects[0].name }}</h5>
                             <img 
                             (mouseover)="showContribution = true"
                             (mouseleave)="showContribution = false"
-                            class="project_icon jumping_icon" src="./assets/emojis/statistic.svg" alt="icon for showing more info">
+                            class="project_icon jumping_icon" src="{{ projects[0].iconSrc }}" alt="icon for showing more info">
                         </div>
-                        <span class="technologies">REST API | JavaScript | CSS | HTML</span>
+                        <span class="technologies">{{ projects[0].technologies }}</span>
                         {{ 'work.Pokedex.description' | translate }}
                         <div class="interactiv_btns">
-                            <button class="btn" (click)="goToUrl('https://github.com/BaraDroid/pokedex')">Git Hub <img src="./assets/menu_icons/arrow_outward.svg" alt="illustrating arrow"></button>
-                            <button class="btn" (click)="goToUrl('https://pokedex.barbora-lambeinova.de/')">Live Test <img src="./assets/menu_icons/arrow_outward.svg" alt="illustrating arrow"></button>
+                            <button class="btn" (click)="goToUrl(projects[0].gitHubUrl)">Git Hub <img src="./assets/menu_icons/arrow_outward.svg" alt="illustrating arrow"></button>
+                            <button class="btn" (click)="goToUrl(projects[0].liveUrl)">Live Test <img src="./assets/menu_icons/arrow_outward.svg" alt="illustrating arrow"></button>
                         </div>
                     </div>
                     <div class="arrows">
