--- a/src/app/main-content/work/work.component.html
+++ b/src/app/main-content/work/work.component.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="my_contribution" *ngIf="showContribution">
-                {{ 'work.pokedex.contribution' | translate }}
+                {{ projects[currentIndex].contributionKey | translate }}
             </div>
 
         </div>
