--- a/src/app/main-content/reviews/reviews.component.scss
+++ b/src/app/main-content/reviews/reviews.component.scss
@@ -27,14 +27,15 @@ section {
 }
 
 .content h2 {
+    text-wrap: nowrap;
     line-height: 72px;
-    margin-top: 92px;
+    margin-top: 16px;
 }
 
 .boxes {
     display: flex;
     justify-content: space-between;
-    height: 472px;
+    height: 100%;
     margin-top: 48px;
     gap: 40px;
     padding-right: 40px;
@@ -50,6 +51,10 @@ section {
 
 .nr_three {
     align-self: flex-end;
+}
+
+.nr_one .nr_two .nr_three {
+    width: 25vw;
 }
 
 app-navdots {
