--- a/src/app/main-content/competences/competences.component.html
+++ b/src/app/main-content/competences/competences.component.html
@@ -10,7 +10,12 @@
             </div>
             <div class="animation">
                 <img class="learning_sun" src="./assets/animation_wheels/orange_sun.svg" alt="">
-                <img class="learning_icon" src="./assets/emojis/learning.svg" alt="">
+                <img (mouseover)="showFurtherSkills = true" (mouseleave)="showFurtherSkills = false" class="learning_icon" src="./assets/emojis/learning.svg" alt="">
+            </div>'
+            <div class="further_skills" *ngIf="showFurtherSkills" [ngClass]="{'further_skills_visible' : showFurtherSkills}">
+                <h5>{{ 'competencen.further_skills.h5' | translate }}</h5>
+                <p>{{ 'competencen.further_skills.p' | translate }}</p>
+                <img src="./assets/frontend_icons/python_logo.svg" alt="python logo">
             </div>
         </div>
         <div class="content_right fontQuicksand">
