--- a/src/app/main-content/competences/competences.component.scss
+++ b/src/app/main-content/competences/competences.component.scss
@@ -76,6 +76,10 @@ h2 {
     margin-top: 40px;
 }
 
+.frontend_icon:hover .skillIcon {
+    transform: scale(1.1);
+}
+
 .learning_sun {
     position: absolute;
     height: 120px;
@@ -92,10 +96,39 @@ h2 {
     z-index: 15;
 }
 
-.skillIcon {
-    &:hover {
-        transform: scale(1.1);
+.further_skills {
+    background-color: #f9af42;
+    padding: 32px;
+    border-radius: 4px;
+    border: 1px solid #F8F7E5;
+    color:#F8F7E5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    width: 67%;
+    text-align: center;
+    > h5 {
+        font-size: 24px;
+        font-weight: 700;
+        font-family: 'Quicksand';
     }
+    >p {
+        font-size: 16px;
+        font-weight: 400;
+        font-family: 'Quicksand';
+    }
+    >img {height: 40px;}
+}
+
+@keyframes slide_from_bottom {
+    from {transform: translateX(45%) translateY(120%)};
+    to {transform: translateX(45%) translateY(-16%);}
+}
+
+.further_skills_visible {
+    animation: slide_from_bottom 0.4s ease-out forwards;
 }
 
 app-navdots {
