--- a/src/app/main-content/about-me/about-me.component.html
+++ b/src/app/main-content/about-me/about-me.component.html
@@ -15,8 +15,8 @@
                     <div class="interactive">
                        <a href="#contact"><button class="btn fontQuicksand">Let´s Talk</button></a>
                         <img class="jumping_icon"
-                        (mouseover)="toggleInfoSlider()"
-                        (mouseleave)="toggleInfoSlider()" src="./assets/emojis/secret.svg" alt="">
+                        (mouseover)="infoSliderVisible = true"
+                        (mouseleave)="infoSliderVisible = false" src="./assets/emojis/secret.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -29,7 +29,7 @@
 
 
  
-    <div class="info_slide_up" [ngClass]="{'show_info_slider': infoSliderVisible}">
+    <div class="info_slide_up" *ngIf="infoSliderVisible" [ngClass]="{'show_info_slider': infoSliderVisible}">
         <div class="menu_title">
             <h5>More about me</h5>
             <img class="x_icon" src="./assets/menu_icons/close_white.svg" alt="x icon">
