--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -76,17 +76,16 @@ h2 {
     border-radius: 4px;
     border: 1px solid black;
     padding: 32px;
-    //display: none;
-    transform: translateY(100%);
+    display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 16px;
     background-color: #679aac;
     color: #f8f7e5;
     font-family: 'Quicksand';
-    align-self: flex-end;
-    margin-right: 20%;
-    transition: transform 0.4s ease-out;
+    margin-left: 35%;
+    //transform: translateX(108%) translateY(18%);
+    z-index: 100;
     >div {
         display: flex;
         align-items: center;
@@ -100,11 +99,14 @@ h2 {
     display: none;
 }
 
+@keyframes lets_slide {
+    from { transform: translateY(10%); } /* Startposition rechts außen */
+    to { transform: translateY(-140%); } /* Endposition sichtbar (rechts) */
+}
+
 .show_info_slider {
-    display: flex;
-    //background-color: red;
-    transform: translateY(-77%);
-    z-index: 3;
+    animation: lets_slide 0.4s ease-out forwards;
+    z-index: 300;
 }
 
 h5 {
@@ -135,7 +137,7 @@ app-navdots {
 
 //************max-width*******************************************************
 @media(max-width: 1290px) {
-    .text_over {margin-right: 3%; width: 84%;}
+    .text_over {width: 120%;}
     .left_side >img {margin-left: 0;}
 }
 
