--- a/src/app/main-content/work/work.component.scss
+++ b/src/app/main-content/work/work.component.scss
@@ -131,8 +131,15 @@ h5 {
     color: #f8f7e5;
     font-family: 'Quicksand';
     align-self: flex-end;
-    //opacity: 0;
-    // transition: opacity 10.4s ease-out;
+}
+
+@keyframes fade_in {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+.fade_contribution_in {
+    animation: fade_in 0.4s ease-out;
 }
 
 // TO DO to pridani tridy funguje, ale ta opacity se nemeni postupne
