new structure of contact section

--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -4,14 +4,18 @@
     <div class="content fontQuicksand">
         <div class="main">
         <div class="content_left">
-            <h2 class="fontEckzar">{{ 'contact.h2_part1' | translate }}<br>{{ 'contact.h2_part2' | translate }}<br>{{ 'contact.h2_part3' | translate }}</h2>
+            <div class="section_name">
+                <h2 class="fontEckzar">{{ 'contact.h2_part1' | translate }}</h2>
+                <h2 class="fontEckzar">{{ 'contact.h2_part2' | translate }}</h2>
+                <h2 class="fontEckzar">{{ 'contact.h2_part3' | translate }}</h2>
+            </div>
             <div>
                 <p class="colorize">{{ 'contact.text1' | translate }}</p><br>
                 <p>{{ 'contact.text2' | translate }}</p>
             </div>
             <div class="gearwheels">
-                <img class="blue_sun rotating" src="./assets/animation_wheels/animation_wheel_blue.svg" alt="blue rotating wheel">
                 <img class="orange_sun rotate_anticlockwise" src="./assets/animation_wheels/animation_wheel_orange.svg" alt="orange rotating wheel">
+                <img class="blue_sun rotating" src="./assets/animation_wheels/animation_wheel_blue.svg" alt="blue rotating wheel">
             </div>
         </div>
         <div class="content_right">
