--- a/src/app/main-content/contact/formular/formular.component.html
+++ b/src/app/main-content/contact/formular/formular.component.html
@@ -2,14 +2,14 @@
     <div class="your_info">
         <div class="name_email">
             <label for="name">{{ 'formular.name' | translate }}</label>
-            <input #name="ngModel" minLength="4" [(ngModel)]="contactData.name" type="text" placeholder="{{ 'formular.name_placeholder' | translate }}" required name="name" >
+            <input #name="ngModel" minLength="4" [(ngModel)]="contactData.name" type="text" placeholder="{{ 'formular.name_placeholder' | translate }}" required name="name" id="name"  >
             @if(!name.valid && name.touched) {
                 <span>{{ 'formular.notification_name' | translate }}</span>
             }
         </div>
         <div class="name_email">
             <label for="email">{{ 'formular.email' | translate }}</label>
-            <input #email="ngModel" [(ngModel)]="contactData.email" type="text" placeholder="{{ 'formular.email_placeholder' | translate }}" required name="email" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}">
+            <input #email="ngModel" [(ngModel)]="contactData.email" type="text" placeholder="{{ 'formular.email_placeholder' | translate }}" required name="email" id="email" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}">
             @if(!email.valid && email.touched){
                 <span>{{ 'formular.notification_email' | translate }}</span>
             }
@@ -18,7 +18,7 @@
     <div class="message">
         <div class="name_email">
             <label for="message">{{ 'formular.message' | translate }}</label>
-            <textarea #message="ngModel" minLength="4" [(ngModel)]="contactData.message" name="message" placeholder="{{ 'formular.message_placeholder' | translate }}" required id="message"></textarea>
+            <textarea #message="ngModel" minLength="4" [(ngModel)]="contactData.message" name="message" id="message" placeholder="{{ 'formular.message_placeholder' | translate }}" required id="message"></textarea>
             @if(!message.valid && message.touched){
                 <span>{{ 'formular.notification_message' | translate }}</span>
             }
