--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -8,6 +8,11 @@ section {
     align-items: center;
 }
 
+app-common-navbar {
+    width: 100%;
+    max-width: 1440px;
+}
+
 .content {
     width: 100%;
     max-width: 1440px;
