--- a/src/app/main-content/contact/contact.component.scss
+++ b/src/app/main-content/contact/contact.component.scss
@@ -4,7 +4,6 @@ section {
     color: #F8F7E5;
     height: 100dvh;
     width: 100%;
-    scroll-snap-align: start;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -13,7 +12,7 @@ section {
 .content {
     width: 100%;
     max-width: 1440px;
-    //height: calc(100vh - 88px - 88px);
+    height: 100%;
     padding-left: 112px;
     padding-right: 72px;
     display: flex;
@@ -69,7 +68,12 @@ h2 {
     font-weight: 700;
 }
 
-app-footer {width: 100%; position: relative; bottom: 0;}
+app-common-navbar {
+    width: 100%;
+    max-width: 1440px;
+}
+
+app-footer {width: 100%; position: relative; bottom: 0; max-width: 1440px;}
 
 app-navdots {
     display: flex;
