--- a/src/app/main-content/reviews/reviews.component.scss
+++ b/src/app/main-content/reviews/reviews.component.scss
@@ -9,6 +9,11 @@ section {
     align-items: center;
 }
 
+app-common-navbar {
+    width: 100%;
+    max-width: 1440px;
+}
+
 .content {
     width: 100%;
     height: 100%;
