--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -39,7 +39,6 @@ app-common-navbar {
     display: flex;
     flex-direction: column;
     width: calc(100% - 557px);
-    //to funguje minimalne, kdyz mam otevreny dev tools
 }
 
 h2 {
@@ -47,22 +46,22 @@ h2 {
     font-size: 72px;
     font-weight: 700;
     color: #1D1D1D;
-    //margin-left: calc(100% - 349px);
     white-space: nowrap;
     align-self: flex-end;
 }
 
 .text_over {
+    position: absolute;
+    left: 500px;
+    top: 42vh;
+    width: 750px;
     background-color: #1D1D1D;
     border-radius: 4px;
     padding: 32px;
-    width: 90%;
     z-index: 2;
-    align-self: flex-end;
-    margin-top: 30vh;
-    margin-right: 20%;
+    align-self: center;
+    justify-self: end;
     color: #F8F7E5;
-
 }
 
 .interactive {
@@ -78,6 +77,9 @@ h2 {
 .btn {margin-bottom: 0;}
 
 .info_slide_up {
+    position: relative;
+    bottom: 60px;
+    left: 250px;
     border-radius: 4px;
     border: 1px solid black;
     padding: 32px;
@@ -88,8 +90,8 @@ h2 {
     background-color: #679aac;
     color: #f8f7e5;
     font-family: 'Quicksand';
-    margin-left: 35%;
-    //transform: translateX(108%) translateY(18%);
+    justify-self: center;
+    align-self: center;
     z-index: 100;
     >div {
         display: flex;
@@ -142,12 +144,7 @@ app-navdots {
 
 //************max-width*******************************************************
 @media(max-width: 1290px) {
-    .text_over {width: 120%;}
     .left_side >img {margin-left: 0;}
-}
-
-@media (max-width: 1245px) {
-    //.text_over {width: 624px;}
 }
 
 @media (max-width: 1192px) {
@@ -157,21 +154,16 @@ app-navdots {
         height: unset;
         padding-top: 0;
     }
-    // .text_over {align-self: center;
-    //     margin-left: 20%;}
-    // .scroll_bar {padding-bottom: 0;}
 }
 
 @media (max-width: 1048px) {
     .left_side >img {width: 347px;}
-    //.text_over {width: 588px;}
 }
 
 @media (max-width: 994px) {
     .text_over {
         padding: 16px;
         font-size: 16px;
-        //margin-left: 10%;
     }
     .info_slide_up {padding: 16px; gap: 8px;}
     h5 {font-size: 20px;}
@@ -184,7 +176,6 @@ app-navdots {
 
 @media (max-width: 889px) {
     .left_side >img {width: 300px;}
-    //.text_over {width: 444px;}
     h2 {font-size: 62px;}
 }
 
@@ -199,10 +190,6 @@ app-navdots {
         height: unset;
         padding-top: 46px;
     }
-    // .text_over {
-    //     margin-left: 17%;
-    //     width: 71%;
-    // }
     h2 {font-size: 40px; line-height: 40px;}
     .vanishable {display: none;}
 }
