--- a/src/app/main-content/above-the-folder/above-the-folder.component.scss
+++ b/src/app/main-content/above-the-folder/above-the-folder.component.scss
@@ -71,6 +71,9 @@ app-navdots {
 .arrow {
     position: absolute;
     z-index: 2;
+    left: 53px;
+    bottom: 51px;
+    height: 42px;
 }
 
 .atf_right {
@@ -99,26 +102,33 @@ app-navdots {
 .rotating {margin-top: 50px;}
 
 
-@media (max-width: 1130px) {
+@media(max-width: 1213px) {
+    .atf_left {margin-left: 0;}
+}
+
+@media (max-width: 1155px) {
     .atf_left .text h1 {line-height: 78px; font-size: 78px;}
     .atf_left .text span {font-size: 30px;}
 }
 
-@media (max-width: 1018px) {
+@media (max-width: 1055px) {
     .atf_left .text h1 {line-height: 70px; font-size: 70px;}
-    .atf_left .text span {font-size: 25px;line-height: 30px;}
 }
 
 @media(max-width: 1000px) {
-    .atf_left .text span {font-size: 30px;line-height: 50px;}
+    .atf_left .text span {font-size: 30px;}
     .atf_left{>img{margin-top: 56px;}}
+    .my_foto {height: 92%;}
+    .sun {height: 299px;
+        bottom: 70px;
+        left: 20px;}
 }
 
-@media(max-width: 940px) {
-    .atf_left {margin-left: 0;}
+@media (max-width: 965px) {
+    .my_foto {right: -20px;}
 }
 
-@media (max-width: 925px) {
+@media (max-width: 935px) {
     .atf_left .text h1 {line-height: 60px; font-size: 60px;}
 }
 
@@ -127,12 +137,7 @@ app-navdots {
     .scroll_bar {display: none;}
 }
 
-@media (max-width: 828px) {
-    .atf_left{gap: 50px; margin-left: 0;}
-    .atf_left img {height: 125px;}
-}
-
-@media (max-width: 810px) {
+@media (max-width: 820px) {
     .atf_left .text h1 {font-size: 50px; line-height: 52px;}
     .atf_left .text span {font-size: 26px; line-height: 34px;}
 }
@@ -143,11 +148,22 @@ app-navdots {
 
 @media (max-width: 700px) {
     .content {padding-left: 16px; padding-right: 16px;}
+    .my_foto {right: 9px; height: 84%;}
+    .sun {height: 260px; left: -10px;}
 }
 
-@media (max-width: 650px) {
-    .atf_left{gap: 75px;}
+@media (max-width: 610px) {
+    .my_foto {height: 76%;}
+    .sun {height: 216px; bottom: 9px;}
 }
+
+@media (max-width: 560px) {
+    .atf_right {width: 200px;}
+    .atf_left {width: 274px;}
+}
+
+//HIER  tady jsem vykomentovala overflow
+//odtud to dodelat na malym kompu, urcite mi nebude sedet vyska a na mobily bude lepsi to delat na malej obrazovce
 
 @media(max-width: 580px) {
     .atf_left .text span{line-height: 32px;}
