--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -54,7 +54,7 @@ h2 {
     position: absolute;
     left: 500px;
     top: 42vh;
-    width: 750px;
+    width: 100%;
     background-color: #1D1D1D;
     border-radius: 4px;
     padding: 32px;
@@ -78,8 +78,8 @@ h2 {
 
 .info_slide_up {
     position: relative;
-    bottom: 60px;
-    left: 250px;
+    bottom: 40px;
+    left: 200px;
     border-radius: 4px;
     border: 1px solid black;
     padding: 32px;
@@ -108,7 +108,7 @@ h2 {
 
 @keyframes lets_slide {
     from { transform: translateY(10%); } /* Startposition rechts außen */
-    to { transform: translateY(-140%); } /* Endposition sichtbar (rechts) */
+    to { transform: translateY(-400px); } /* Endposition sichtbar (rechts) */
 }
 
 .show_info_slider {
@@ -147,6 +147,11 @@ app-navdots {
     .left_side >img {margin-left: 0;}
 }
 
+@media (max-width: 1240px) {
+    .text_over {left: 416px;}
+    .info_slide_up {left: 180px;}
+}
+
 @media (max-width: 1192px) {
     .left_side >img {
         width: 412px; 
@@ -154,6 +159,8 @@ app-navdots {
         height: unset;
         padding-top: 0;
     }
+    .text_over {left: 319px; width: 161%;}
+    .info_slide_up {bottom: -222px;}
 }
 
 @media (max-width: 1048px) {
