test commit again

--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -105,7 +105,7 @@ h2 {
 .x_icon {
     display: none;
 }
-
+//test commit
 @keyframes lets_slide {
     from { transform: translateY(10%); } /* Startposition rechts außen */
     to { transform: translateY(-400px); } /* Endposition sichtbar (rechts) */
