--- a/src/app/main-content/about-me/about-me.component.scss
+++ b/src/app/main-content/about-me/about-me.component.scss
@@ -78,8 +78,6 @@ h2 {
 
 .info_slide_up {
     position: relative;
-    bottom: 40px;
-    left: 200px;
     border-radius: 4px;
     border: 1px solid black;
     padding: 32px;
@@ -105,15 +103,19 @@ h2 {
 .x_icon {
     display: none;
 }
-//test commit
+
 @keyframes lets_slide {
-    from { transform: translateY(10%); } /* Startposition rechts außen */
-    to { transform: translateY(-400px); } /* Endposition sichtbar (rechts) */
+    from { transform: translateY(0); } /* Startposition rechts außen */
+    to { transform: translateY(-200px); } /* Endposition sichtbar (rechts) */
 }
 
 .show_info_slider {
     animation: lets_slide 0.4s ease-out forwards;
     z-index: 300;
+    position: absolute;
+    bottom: 0;
+    bottom: -139px;
+    right: 20%;
 }
 
 h5 {
@@ -149,7 +151,7 @@ app-navdots {
 
 @media (max-width: 1240px) {
     .text_over {left: 416px;}
-    .info_slide_up {left: 180px;}
+
 }
 
 @media (max-width: 1192px) {
@@ -160,7 +162,6 @@ app-navdots {
         padding-top: 0;
     }
     .text_over {left: 319px; width: 161%;}
-    .info_slide_up {bottom: -222px;}
 }
 
 @media (max-width: 1048px) {
